--- a/src/templates.simple/axpansion/server/Components/Unit.razor
+++ b/src/templates.simple/axpansion/server/Components/Unit.razor
@@ -12,7 +12,7 @@
 
 <!-- Modal data alarms -->
 <div class="modal fade" id="alarmsviewmodal" tabindex="-1" aria-labelledby="alarmsviewTitle" aria-hidden="true">
-    <AlarmsView Component="this.Component" MessageProvider="AxoMessageProvider"></AlarmsView>
+    <AlarmsView ObservedObjects="AllVisualItems"></AlarmsView>
 </div>
 
 
