--- a/src/components.desoutter.tightening/app/ix-blazor/Pages/Component_1.razor
+++ b/src/components.desoutter.tightening/app/ix-blazor/Pages/Component_1.razor
@@ -1,36 +1,25 @@
 ﻿@page "/Component_1"
 @using AXOpen.Core;
 
-<button class="btn btn-outline-primary" @onclick="WriteTaskTimesToConsole">Write times to console</button>
 
-@code
-{
-    #region WriteTaskDurationToConsole
-    private async Task WriteTaskTimesToConsole()
-    {
-        await Entry.Plc.documentation.compnentOne.ExampleCylinder.WriteTaskDurationToConsole();
-    }
-    #endregion
-
-}
 
 <!-- <GenericComponentStatusView> -->
-<AxoComponentStatusView Component="@Entry.Plc.documentation.compnentOne.ExampleCylinder"/>
+@* <AxoComponentStatusView Component="@Entry.Plc.documentation.componentOne.ExampleScrewdriver" /> *@
 <!-- </GenericComponentStatusView> -->
 
 <!-- <GenericComponentCommandView> -->
-<AxoComponentCommandView Component="@Entry.Plc.documentation.compnentOne.ExampleCylinder" />
+@* <AxoComponentCommandView Component="@Entry.Plc.documentation.componentOne.ExampleScrewdriver" /> *@
 <!-- </GenericComponentCommandView> -->
 
 <!-- <RccComponentStatusView> -->
 <!-- This will render anything found on parameter assigned to Context  -->
-<RenderableContentControl Context="@Entry.Plc.documentation.compnentOne" Presentation="Status-Display" />
+@* <RenderableContentControl Context="@Entry.Plc.documentation.componentOne" Presentation="Status-Display" /> *@
 <!-- </RccComponentStatusView> -->
 
 
 <!-- <RccComponentCommandView> -->
 <!-- This will render anything found on parameter assigned to Context  -->
-<RenderableContentControl Context="@Entry.Plc.documentation.compnentOne" Presentation="Command-Control" />
+<RenderableContentControl Context="@Entry.Plc.documentation.componentOne" Presentation="Command-Control" />
 <!-- </RccComponentCommandView> -->
 
 
