--- a/src/core/app/ix-blazor/axopencore.blazor/Shared/NavMenu.razor
+++ b/src/core/app/ix-blazor/axopencore.blazor/Shared/NavMenu.razor
@@ -19,6 +19,17 @@
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="DialogExamplesControl">
+                <span class="oi oi-plus" aria-hidden="true"></span> DialogExamplesControl
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="DialogExamplesHandling">
+                <span class="oi oi-plus" aria-hidden="true"></span> Dialog Handling
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="Simatic-ax">
                 <span class="oi oi-plus" aria-hidden="true"></span> Simatic-AX
             </NavLink>
