Add option for change theme in composerContainer. Add background option in composerItem

--- a/src/base/src/AXOpen.VisualComposer/VisualComposerContainer.razor
+++ b/src/base/src/AXOpen.VisualComposer/VisualComposerContainer.razor
@@ -31,6 +31,7 @@
                                 <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#saveAsModal-@Id.ModalIdHelper()">Save as</a></li>
                                 <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#templatesModal-@Id.ModalIdHelper()">Templates</a></li>
                                 <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#setImageModal-@Id.ModalIdHelper()">Set image</a></li>
+                                <li><a class="dropdown-item" @onclick="() => ChangeTheme()">Change theme</a></li>
                             </ul>
                         </div>
                     </div>
