--- a/src/base/src/AXOpen.VisualComposer/VisualComposerItemModal.razor
+++ b/src/base/src/AXOpen.VisualComposer/VisualComposerItemModal.razor
@@ -2,7 +2,7 @@
 {
     <AuthorizeView Roles="Administrator">
         <Authorized>
-            <div class="modal fade" id="settings-@Origin.Id.Replace('.', '_')-@Origin.UniqueGuid" tabindex="-1" aria-hidden="true" data-bs-backdrop="false" style="transform: none;">
+            <div class="modal fade" id="settings-@Origin.Id.Replace('.', '_')-@Origin.UniqueGuid" tabindex="-1" aria-hidden="true" data-bs-backdrop="true" style="transform: none;">
                 <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
                     <div class="modal-content">
                         <div class="modal-header">
@@ -72,6 +72,12 @@
                                 <label class="col-sm-2 col-form-label">Roles</label>
                                 <div class="col-sm-10">
                                     <input type="text" class="form-control" placeholder="Roles" @bind="Origin.Roles">
+                                </div>
+                            </div>
+                            <div class="mb-1 row">
+                                <label class="col-sm-2 col-form-label">Background</label>
+                                <div class="col-sm-10 d-flex align-items-center">
+                                    <input class="form-check-input ms-2 mt-0" type="checkbox" checked="@(Origin.Background ? "checked" : null)" @onclick="() => Origin.Background = !Origin.Background">
                                 </div>
                             </div>
                         </div>
