--- a/src/inspectors/src/AXOpen.Inspectors.blazor/AxoInspectorSpotView.razor
+++ b/src/inspectors/src/AXOpen.Inspectors.blazor/AxoInspectorSpotView.razor
@@ -23,7 +23,13 @@
             return this.Component?.GetChildren().OfType<AxoInspectorData>().FirstOrDefault();
         }
     }
-    
+
+    /// <inheritdoc />
+    public override void AddToPolling(ITwinElement element, int pollingInterval = 250)
+    {
+        
+    }
+
     private void SetCurrentObject()
     {
         if (RccContainer is RenderableContentControl rccContainer)
