--- a/src/templates.simple/axpansion/server/Components/AlarmsButton.razor
+++ b/src/templates.simple/axpansion/server/Components/AlarmsButton.razor
@@ -5,12 +5,12 @@
 @inherits RenderableComplexComponentBase<AXSharp.Connector.ITwinObject>
 
 
-@if(MessageProvider?.MessagesCount > 0)
+@if(MessageProvider?.ActiveMessagesCount > 0)
 {
     <button type="button" class="btn btn-@Observer?.HighestSeverityColor position-relative" data-bs-toggle="modal" data-bs-target="#alarmsviewmodal">
         @Localizer["Alarms"]
         <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-            @MessageProvider?.MessagesCount
+            @MessageProvider?.ActiveMessagesCount
                 <span class="visually-hidden">unread messages</span>
         </span>
     </button>
@@ -40,7 +40,7 @@ else
         } 
     }
     
-    private string Disabled => MessageProvider?.MessagesCount> 0 ? "false" : "true";
+    private string Disabled => MessageProvider?.ActiveMessagesCount> 0 ? "false" : "true";
     
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
