--- a/src/components.rexroth.drives/app/ix-blazor/Pages/Component_1.razor
+++ b/src/components.rexroth.drives/app/ix-blazor/Pages/Component_1.razor
@@ -18,6 +18,8 @@
 
 }
 
+<RenderableContentControl Context="@Entry.Plc.documentation.componentOne" Presentation="Command-Control" />
+@* 
 <!-- <GenericComponentStatusView> -->
  <AxoComponentStatusView Component="@Entry.Plc.documentation.componentOne.AxoIndraDrive_" /> 
 <!-- </GenericComponentStatusView> -->
@@ -35,5 +37,5 @@
 <RenderableContentControl Context="@Entry.Plc.documentation.componentOne.AxoIndraDrive_" Presentation="Command-Control" />
 <!-- </RccComponentCommandView> -->
 
-
+ *@
 
