tuning axoInspector dialog

--- a/src/inspectors/app/ix-blazor/AXOpen.Inspectors.blazor/Pages/Documentation.razor
+++ b/src/inspectors/app/ix-blazor/AXOpen.Inspectors.blazor/Pages/Documentation.razor
@@ -7,6 +7,7 @@
 
 @* <RenderableContentControl Context="@Entry.Plc.documentation" Presentation="Command-Control" PollingInterval="100"/> *@
 
+<RenderableContentControl Context="@Entry.Plc.documentation._startInspection" Presentation="Command-Control" PollingInterval="100" />
 <RenderableContentControl Context="@Entry.Plc.documentation._automat._comprehensiveResult" Presentation="Command-Control" PollingInterval="100" />
 
 <RenderableContentControl Context="@Entry.Plc.documentation._automat._analogueInspector" Presentation="Command-Control" PollingInterval="100"/>
