inspector dialog instance - in the unit objects

--- a/src/inspectors/src/AxOpen.Inspectors.Blazor/AxoInspectorDialog/AxoInspectorDialogDialogView.razor
+++ b/src/inspectors/src/AxOpen.Inspectors.Blazor/AxoInspectorDialog/AxoInspectorDialogDialogView.razor
@@ -4,7 +4,7 @@
 @inherits AxoDialogBaseView<AxoInspectorDialog>
 @inject AuthenticationStateProvider _asp
 
-<h3>AxoInspectorDialogDialogView</h3>
+@* <h3>AxoInspectorDialogDialogView</h3> *@
 
 <ModalDialog @ref="@base.ModalDialog" >
     <HeaderTemplate>
