--- a/src/io/app/ix-blazor/Pages/Component_2.razor
+++ b/src/io/app/ix-blazor/Pages/Component_2.razor
@@ -1,38 +1,25 @@
 ﻿@page "/Component_2"
 @using AXOpen.Core;
 
-<PageTitle>Documentation</PageTitle>
-
-
-<button class="btn btn-outline-primary" @onclick="WriteTaskTimesToConsole">Write times to console</button>
-
-@code
-{
-    #region WriteTaskDurationToConsole
-    private async Task WriteTaskTimesToConsole()
-    {
-        await Entry.Plc.documentation.compnentOne.ExampleCylinder.WriteTaskDurationToConsole();
-    }
-    #endregion
-    
-}
 
 <!-- <GenericComponentStatusView> -->
-<AxoComponentStatusView Component="@Entry.Plc.documentation.compnentTwo.ExampleCylinder" />
+<AxoComponentStatusView Component="@Entry.Plc.documentation.componentTwo.ExampleComponent" />
 <!-- </GenericComponentStatusView> -->
 
 <!-- <GenericComponentCommandView> -->
-<AxoComponentCommandView Component="@Entry.Plc.documentation.compnentTwo.ExampleCylinder" />
+<AxoComponentCommandView Component="@Entry.Plc.documentation.componentTwo.ExampleComponent" />
 <!-- </GenericComponentCommandView> -->
 
 <!-- <RccComponentStatusView> -->
 <!-- This will render anything found on parameter assigned to Context  -->
-<RenderableContentControl Context="@Entry.Plc.documentation.compnentTwo" Presentation="Status-Display" />
+<RenderableContentControl Context="@Entry.Plc.documentation.componentTwo" Presentation="Status-Display" />
 <!-- </RccComponentStatusView> -->
+
 
 <!-- <RccComponentCommandView> -->
 <!-- This will render anything found on parameter assigned to Context  -->
-<RenderableContentControl Context="@Entry.Plc.documentation.compnentTwo" Presentation="Command-Control" />
+<RenderableContentControl Context="@Entry.Plc.documentation.componentTwo" Presentation="Command-Control" />
 <!-- </RccComponentCommandView> -->
+
 
 
